--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link link text-black display-4" href="#about-us-1-u5wtZZyXMq">О нас</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#"
+            <a class="nav-link link text-black display-4" href="#gallery-5-u5wtZZzPWW"
               aria-expanded="false">Услуги</a>
           </li>
           <li class="nav-item">
@@ -721,7 +721,7 @@
                 <li class="header-menu-item mbr-fonts-style display-5">
                     <a href="#about-us-1-u5wtZZyXMq" class="text-white">О нас</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
-                    <a href="#" class="text-white">Услуги</a>
+                    <a href="#gallery-5-u5wtZZzPWW" class="text-white">Услуги</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
                     <a href="#contact-form-3-u5wtZZEjTG" class="text-white">Контакты</a>
                   </li><li class="header-menu-item mbr-fonts-style display-5">
